# ChessTF

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  SPEC.md  docker-compose.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
configs/: sweep.yaml
configs/data/: default.yaml
data/: interim.dvc  processed.dvc
infrastructure/docker/: entrypoint.sh  training.Dockerfile  training.local.Dockerfile
infrastructure/terraform/: main.tf  outputs.tf  s3.tf  variables.tf
scripts/: sweep_train.py
src/chesstf/data/: dataset.py  download.py  filter.py  process.py  stream.py  tokenizer.py
src/chesstf/model/: config.py  legality_metric.py  positional.py  stockfish_metric.py  transformer.py
src/chesstf/training/: datamodule.py  trainer.py
tests/: conftest.py  test_dataset.py  test_download.py  test_filter.py  test_legality_metric.py  test_stockfish_metric.py  test_tokenizer.py
