[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chesstf"
version = "0.1.0"
description = "Decoder-only transformer that plays chess using SAN"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "python-chess>=1.999",
    "requests>=2.31",
    "tqdm>=4.66",
    "zstandard>=0.22",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests>=2.31",
    "types-tqdm>=4.66",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chesstf"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
